# anonimus-server

./: .gitignore
anonimus-server/: README.md  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
anonimus-server/anonimus/: concurency.go  concurency_test.go  config.go  config_test.go  handler.go  handler_test.go  record.go  service.go  settings.go  structure.go  test_service.go
anonimus-server/anonimus/server/: __main__.py  action.py  api.py  app.py  message.py  messanger.py  middleware.py  route.py  security.py  service.py  setup.py  struct.py  testing.py  view.py  web.py  worker.py
anonimus-server/anonimus/server/addon/: aiohttp.py
anonimus-server/anonimus/server/entrypoint/: server.py
anonimus-server/anonimus/server/etc/: server.cfg.toml
anonimus-server/anonimus/server/toolling/: aiohttp.py  misc.py  web.py
anonimus-server/anonimus/server/web/: routing.py
anonimus-server/assets/: config.json
anonimus-server/tests/: test_action.py  test_starlette.py  test_view.py
anonimus-ui/: .gitignore  README.md  package-lock.json  package.json  postcss.config.cjs  quasar.config.js
anonimus-ui/public/: index.html
anonimus-ui/src/: App.vue  Root.vue  index.template.html  main.js  route.js
anonimus-ui/src/api/: ctx.js  database.js  dictionary.js  fetch.js  functions.js  queue.js  socket.js  vue.js  websocket.js
anonimus-ui/src/boot/: service.js  uuid.js  websocket.js
anonimus-ui/src/component/: Messanger.vue  MessangerMessage.vue
anonimus-ui/src/components/layout/: HeaderToolbar.vue  ToolbarHeader.vue
anonimus-ui/src/components/messanger/: Messanger.vue  MessangerChat.vue  MessangerChatList.vue  MessangerContactList.vue  MessangerMessageToolbar.vue  MessangerReader.vue  MessangerWriter.vue
anonimus-ui/src/components/user/: OnlineUserList.vue  UserFormDialog.vue  UserList.vue
anonimus-ui/src/css/: quasar.variables.scss
anonimus-ui/src/page/: IndexPage.vue  MessangerPage.vue  SndboxPage.vue  WelcomPage.vue
anonimus-ui/src/router/: index.js
anonimus-ui/src/stores/: chat.js  store.js  user.js
anonimus-ui/src/style/: main.scss
talk-server/: pyproject.toml
talk-server/talk/server/: client.py  server.py  struct.py
talk-server/talk/server/entrypoint/: client.py
