[tool.poetry]
name = "anonimus-server"
version = "0.0.0"
description = "\"Anonimus\" chat server"
readme = "README.md"
authors = ["Martynov Alexandr <triplustr@mail.ru>"]
packages = [
    {include = "anonimus"},
]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.6.0"
typing-extensions = "^4.5.0"
redis = "^5.0.1"
msgspec = "^0.18.6"
falcon = "^3.1.3"
uvicorn = { version = "^0.25.0", optional = true }
websockets = { version = "^12.0", optional = true }

[tool.poetry.scripts]
anonimus-server = 'anonimus.server.entrypoint.server:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
