[tool.poetry]
name = "anonimus-server"
version = "0.0.0"
description = "\"Anonimus\" chat (End-to-End Encryption)"
readme = "README.md"
authors = ["Martynov Alexandr <triplustr@mail.ru>"]
packages = [
    {include = "anonimus"},
]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.6.0"
typing-extensions = "^4.5.0"
redis = "^5.0.1"
msgspec = "^0.18.6"
falcon = "^3.1.3"
uvicorn = { version = "^0.25.0", optional = true }
websockets = { version = "^12.0", optional = true }
starlette = "^0.37.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]