[tool.poetry]
name = "anonimus-server"
version = "0.0.0"
description = "\"Anonimus\" chat (End-to-End Encryption)"
readme = "README.md"
authors = ["Martynov Alexandr <triplustr@mail.ru>"]
packages = [
    {include = "anonimus"},
]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.6.0"
typing-extensions = "^4.5.0"
redis = "^5.0.1"
msgspec = "^0.18.6"
aiohttp = "^3.9.3"
aiojobs = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-aiohttp = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode = "auto"

filterwarnings = [
    "ignore::DeprecationWarning",
]