[tool.poetry]
name = "talk-server"
version = "0.0.0"
description = "\"Talk\" Messanger Server"
readme = "README.md"
authors = ["Martynov Alexandr <triplustr@mail.ru>"]
packages = [
    {include = "talk"},
]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.6.0"
msgspec = { git = "https://github.com/jcrist/msgspec.git", tag = "0.17.0" }
aioconsole = "^0.6.1"
typing-extensions = "^4.5.0"

[tool.poetry.scripts]
talk-server = 'talk.server.entrypoint.server:run'
talk-client = 'talk.server.entrypoint.client:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
